--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.3.1.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.dlabs.auth.casbin</groupId>
+	<groupId>com.auth.casbin</groupId>
 	<artifactId>authorization-casbin</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>authorization-casbin</name>
